tests/error/linear_errors/implicit_drop_in_match2.err
Error: Drop violation (at $FILE:12:9)
   | 
10 | 
11 | @compile_guppy
12 | def main(p: Point @owned) -> None: # pyright: ignore[reportInvalidTypeForm]
   |          ^^^^^^^^^^^^^^^ Field `p.x` with non-droppable type `qubit` is leaked

Help: Make sure that `p.x` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
